--- a/Robot Controller.ipynb
+++ b/Robot Controller.ipynb
@@ -61,9 +61,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "maze-id 1-1545892238\n",
+      "[[3, 2, 2, 2, 2, 2, 2, 2, 1],\n",
+      " [0, 0, 2, 2, 2, 2, 2, 0, 0],\n",
+      " [2, 0, 0, 2, 2, 2, 0, 0, 2],\n",
+      " [2, 2, 0, 0, 2, 0, 0, 2, 2],\n",
+      " [2, 2, 2, 0, 0, 0, 2, 2, 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "import helper\n",
     "\n",
@@ -85,18 +98,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "迷宫共有 5 行 9 列，第三行第六列的元素是 0\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO 1模拟环境的行数\n",
-    "rows = None \n",
+    "rows = len(env_data) \n",
     "\n",
     "#TODO 2模拟环境的列数\n",
-    "columns = None \n",
+    "columns = len(env_data[0]) \n",
     "\n",
     "#TODO 3取出模拟环境第三行第六列的元素\n",
-    "row_3_col_6 = None \n",
+    "row_3_col_6 = env_data[3][6] \n",
     "\n",
     "print(\"迷宫共有\", rows, \"行\", columns, \"列，第三行第六列的元素是\", row_3_col_6)"
    ]
@@ -122,24 +143,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "迷宫中，第一行共有 7 个障碍物，第三列共有 3 个障碍物。\n"
+     ]
+    }
+   ],
    "source": [
     "#TODO 4计算模拟环境中，第一行的的障碍物个数。\n",
-    "number_of_barriers_row1 = None\n",
+    "number_of_barriers_row1 = env_data[0].count(2)\n",
     "\n",
     "#TODO 5计算模拟环境中，第三列的的障碍物个数。\n",
-    "number_of_barriers_col3 = None\n",
     "\n",
+    "number_of_barriers_col3 = 0\n",
+    "for i in range(rows):\n",
+    "    if env_data[i][2] == 2:\n",
+    "        number_of_barriers_col3 += 1\n",
     "print(\"迷宫中，第一行共有\", number_of_barriers_row1, \"个障碍物，第三列共有\", number_of_barriers_col3, \"个障碍物。\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.000s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_cal_barriers"
    ]
@@ -158,20 +202,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "loc_map = {} #TODO 6按照上述要求创建字典\n",
+    "loc_map = {\"start\":(0,8),\"destination\":(0,0)} #TODO 6按照上述要求创建字典\n",
     "\n",
-    "robot_current_loc = None #TODO 7保存机器人当前的位置"
+    "robot_current_loc = loc_map[\"start\"] #TODO 7保存机器人当前的位置"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_cal_loc_map"
    ]
@@ -214,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,14 +284,42 @@
     "    act -- string, robots meant action\n",
     "    \"\"\"\n",
     "    #TODO 8\n",
-    "    pass"
+    "    row,column = loc[0],loc[1]\n",
+    "    if act == 'u':\n",
+    "        if (row - 1) < 0 or (env_data[row-1][column] == 2):\n",
+    "            return False\n",
+    "    elif act == 'd':\n",
+    "        if (row + 1) >= rows or (env_data[row+1][column] == 2):\n",
+    "            return False\n",
+    "    elif act == 'l':\n",
+    "        if (column - 1) < 0 or (env_data[row][column-1] == 2):\n",
+    "            return False\n",
+    "    elif act == 'r' :\n",
+    "        if (column + 1) >= columns or (env_data[row][column+1] == 2):\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "    return True\n",
+    "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.002s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_is_move_valid_special"
    ]
@@ -250,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,14 +349,41 @@
     "    act -- string, robots meant action\n",
     "    \"\"\"\n",
     "    #TODO 9\n",
-    "    pass"
+    "    row,column = loc[0],loc[1]\n",
+    "    if act == 'u':\n",
+    "        if (row - 1) < 0 or (env_data[row-1][column] == 2):\n",
+    "            return False\n",
+    "    elif act == 'd':\n",
+    "        if (row + 1) >= rows or (env_data[row+1][column] == 2):\n",
+    "            return False\n",
+    "    elif act == 'l':\n",
+    "        if (column - 1) < 0 or (env_data[row][column-1] == 2):\n",
+    "            return False\n",
+    "    elif act == 'r' :\n",
+    "        if (column + 1) >= columns or (env_data[row][column+1] == 2):\n",
+    "            return False\n",
+    "    else:\n",
+    "        return False\n",
+    "    return True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.004s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_is_move_valid"
    ]
@@ -298,7 +409,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**回答：** （请在这里填写你的回答）"
+    "1.一个是外部变量，一个是函数内部变量，作用域不同\n",
+    "2.不会改变，因为是一个拷贝"
    ]
   },
   {
@@ -318,18 +430,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
-    "## TODO 10 从头定义、实现你的函数"
+    "## TODO 10 从头定义、实现你的函数\n",
+    "def valid_actions(env_data,loc):\n",
+    "    row,column = loc[0],loc[1]\n",
+    "    act = []\n",
+    "    if ((row - 1) >= 0) and ((env_data[row-1][column] == 0) or (env_data[row-1][column] == 3)) :\n",
+    "        act.append('u')\n",
+    "    if ((row + 1) < rows) and ((env_data[row+1][column] == 0) or (env_data[row+1][column] == 3)):\n",
+    "        act.append('d')\n",
+    "    if ((column - 1) >= 0) and ((env_data[row][column-1] == 0) or (env_data[row][column-1] == 3)):\n",
+    "        act.append('l')\n",
+    "    if ((column + 1) < columns) and ((env_data[row][column+1] == 0) or (env_data[row][column+1] == 3)):\n",
+    "        act.append('r')\n",
+    "    return act\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 69,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.006s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_valid_actions"
    ]
@@ -349,18 +485,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO 11 从头定义、实现你的函数"
+    "##TODO 11 从头定义、实现你的函数\n",
+    "def move_robot(loc,act):\n",
+    "    row,column = loc[0],loc[1]\n",
+    "    dst_row,dst_column = 0,0\n",
+    "    if act == 'u':\n",
+    "        if (row - 1) < 0 or (env_data[row-1][column] == 2):\n",
+    "            return False\n",
+    "        else:\n",
+    "            dst_row = row-1\n",
+    "            dst_column = column\n",
+    "    elif act == 'd':\n",
+    "        if (row + 1) >= rows or (env_data[row+1][column] == 2):\n",
+    "            return False\n",
+    "        else:\n",
+    "            dst_row = row+1\n",
+    "            dst_column = column\n",
+    "    elif act == 'l':\n",
+    "        if (column - 1) < 0 or (env_data[row][column-1] == 2):\n",
+    "            return False\n",
+    "        else:\n",
+    "            dst_row = row\n",
+    "            dst_column = column-1\n",
+    "    elif act == 'r' :\n",
+    "        if (column + 1) >= columns or (env_data[row][column+1] == 2):\n",
+    "            return False\n",
+    "        else:\n",
+    "            dst_row = row\n",
+    "            dst_column = column+1\n",
+    "    else:\n",
+    "        return False\n",
+    "    \n",
+    "    return (dst_row,dst_column)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 71,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      ".\n",
+      "----------------------------------------------------------------------\n",
+      "Ran 1 test in 0.003s\n",
+      "\n",
+      "OK\n"
+     ]
+    }
+   ],
    "source": [
     "%run -i -e test.py RobotControllortTestCase.test_move_robot"
    ]
@@ -391,7 +570,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "##TODO 12 从头实现你的函数"
+    "##TODO 12 从头实现你的函数\n",
+    "from numpy import random\n",
+    "def random_choose_actions(env_data,loc):\n",
+    "    for i in range(1000):\n",
+    "        print(i)\n",
+    "        val_act = valid_actions(env_data,loc)\n",
+    "        if val_act != None:\n",
+    "            act = random.choice(val_act,1)\n",
+    "            new_loc = move_robot(loc,act)\n",
+    "            print(new_loc)\n",
+    "            if new_loc == (0,0):\n",
+    "                print(\"在第{}个回合找到宝藏！\".format(i))\n",
+    "                break"
    ]
   },
   {
@@ -465,7 +656,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
