--- a/Robot Controller.ipynb
+++ b/Robot Controller.ipynb
@@ -61,14 +61,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "maze-id 1-1545892238\n",
+      "maze-id 1-1545897454\n",
       "[[3, 2, 2, 2, 2, 2, 2, 2, 1],\n",
       " [0, 0, 2, 2, 2, 2, 2, 0, 0],\n",
       " [2, 0, 0, 2, 2, 2, 0, 0, 2],\n",
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -169,7 +169,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +178,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.000s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -213,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -222,7 +222,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.006s\n",
       "\n",
       "OK\n"
      ]
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -305,7 +305,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -314,7 +314,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.002s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -334,7 +334,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -369,7 +369,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -378,7 +378,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.004s\n",
+      "Ran 1 test in 0.007s\n",
       "\n",
       "OK\n"
      ]
@@ -430,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -451,7 +451,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -460,7 +460,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.006s\n",
+      "Ran 1 test in 0.004s\n",
       "\n",
       "OK\n"
      ]
@@ -485,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -534,7 +534,7 @@
      "text": [
       ".\n",
       "----------------------------------------------------------------------\n",
-      "Ran 1 test in 0.003s\n",
+      "Ran 1 test in 0.008s\n",
       "\n",
       "OK\n"
      ]
@@ -566,19 +566,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
     "##TODO 12 从头实现你的函数\n",
     "from numpy import random\n",
     "def random_choose_actions(env_data,loc):\n",
+    "    new_loc = loc\n",
     "    for i in range(1000):\n",
-    "        print(i)\n",
-    "        val_act = valid_actions(env_data,loc)\n",
+    "        val_act = valid_actions(env_data,new_loc)\n",
     "        if val_act != None:\n",
     "            act = random.choice(val_act,1)\n",
-    "            new_loc = move_robot(loc,act)\n",
+    "            print(act)\n",
+    "            new_loc = move_robot(new_loc,act)\n",
     "            print(new_loc)\n",
     "            if new_loc == (0,0):\n",
     "                print(\"在第{}个回合找到宝藏！\".format(i))\n",
@@ -587,9 +588,293 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['d']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['l']\n",
+      "(3, 5)\n",
+      "['r']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['l']\n",
+      "(3, 5)\n",
+      "['r']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['l']\n",
+      "(3, 5)\n",
+      "['r']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['r']\n",
+      "(1, 8)\n",
+      "['l']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['u']\n",
+      "(1, 7)\n",
+      "['d']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['r']\n",
+      "(2, 7)\n",
+      "['l']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['u']\n",
+      "(2, 6)\n",
+      "['d']\n",
+      "(3, 6)\n",
+      "['l']\n",
+      "(3, 5)\n",
+      "['d']\n",
+      "(4, 5)\n",
+      "['u']\n",
+      "(3, 5)\n",
+      "['d']\n",
+      "(4, 5)\n",
+      "['l']\n",
+      "(4, 4)\n",
+      "['r']\n",
+      "(4, 5)\n",
+      "['l']\n",
+      "(4, 4)\n",
+      "['l']\n",
+      "(4, 3)\n",
+      "['u']\n",
+      "(3, 3)\n",
+      "['d']\n",
+      "(4, 3)\n",
+      "['u']\n",
+      "(3, 3)\n",
+      "['l']\n",
+      "(3, 2)\n",
+      "['u']\n",
+      "(2, 2)\n",
+      "['l']\n",
+      "(2, 1)\n",
+      "['u']\n",
+      "(1, 1)\n",
+      "['d']\n",
+      "(2, 1)\n",
+      "['u']\n",
+      "(1, 1)\n",
+      "['d']\n",
+      "(2, 1)\n",
+      "['r']\n",
+      "(2, 2)\n",
+      "['d']\n",
+      "(3, 2)\n",
+      "['u']\n",
+      "(2, 2)\n",
+      "['d']\n",
+      "(3, 2)\n",
+      "['u']\n",
+      "(2, 2)\n",
+      "['d']\n",
+      "(3, 2)\n",
+      "['r']\n",
+      "(3, 3)\n",
+      "['d']\n",
+      "(4, 3)\n",
+      "['u']\n",
+      "(3, 3)\n",
+      "['d']\n",
+      "(4, 3)\n",
+      "['u']\n",
+      "(3, 3)\n",
+      "['l']\n",
+      "(3, 2)\n",
+      "['u']\n",
+      "(2, 2)\n",
+      "['d']\n",
+      "(3, 2)\n",
+      "['u']\n",
+      "(2, 2)\n",
+      "['l']\n",
+      "(2, 1)\n",
+      "['u']\n",
+      "(1, 1)\n",
+      "['l']\n",
+      "(1, 0)\n",
+      "['u']\n",
+      "(0, 0)\n",
+      "在第137个回合找到宝藏！\n"
+     ]
+    }
+   ],
    "source": [
     "# 运行\n",
     "random_choose_actions(env_data, robot_current_loc)"
